# npmx-zephyr

./: CMakeLists.txt  Kconfig.nrf  west.yml
doc/: additional_resources.rst  build_doc_in_docker.sh  conf.py  index.rst  links.txt  shortcuts.txt
doc/includes/: build_and_run.txt
drivers/: CMakeLists.txt  Kconfig
drivers/npmx/: CMakeLists.txt  Kconfig  npmx_config.h  npmx_config_npm1300_eng_b.h  npmx_driver.c  npmx_driver.h  npmx_glue.c  npmx_glue.h  npmx_shell.c
dts/bindings/mfd/: nordic,npm1300-eng-b.yaml
samples/buck/: CMakeLists.txt  Kconfig  README.rst
samples/buck/src/: main.c
samples/charger_and_events/: CMakeLists.txt  Kconfig  README.rst
samples/charger_and_events/src/: main.c
samples/ldo/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/ldo/boards/: nrf5340dk_nrf5340_cpuapp.overlay
samples/ldo/src/: main.c
samples/led/: CMakeLists.txt  README.rst
samples/led/src/: main.c
samples/loadsw/: CMakeLists.txt  Kconfig  README.rst
samples/loadsw/src/: main.c
samples/pof/: CMakeLists.txt  README.rst
samples/pof/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
samples/pof/src/: main.c
samples/shell_example/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/shell_example/boards/: nrf52840dk_nrf52840.overlay
samples/simple/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/timer/: README.rst
samples/timer_wakeup/: CMakeLists.txt  README.rst  prj.conf
samples/vbusin/: CMakeLists.txt  README.rst
samples/watchdog/: Kconfig  README.rst  prj.conf
zephyr/: module.yml
(+12 files in other folders)
